# JazzHarmonyTreebank

./: .gitignore  Trees.jl  annotation_notes_christoph.org  annotation_notes_pettter.txt  compile_tree_annotations.jl  compile_tree_data.jl  compiled_tree_data.txt  create_sorted_standards.jl  create_treebank_file.jl  csv-to-json.ipynb  expand_abbreviated_formats.jl  generate_plots.py  generate_treebank.py  generate_treeplots.py  iRealPro.json  iRealProQTree.json  jazz_tree_tools.jl  jht_utilities.py  plot_tree.jl  plot_trees.py  readme.md  requirements.txt  sorted_standards.tsv  tree-annotation.json  tree-plots.md  treebank.json  treebank_library.py
.ipynb_checkpoints/: csv-to-json-checkpoint.ipynb
LausanneJazzTreebank/: README.md  data.tsv  metadata.csv  metadata.numbers  metadata.tsv  read_treebank.jl
LausanneJazzTreebank/ParseTreeStrings.hsproj/ParseTreeStrings/: Main.hs  ParseTreeStrings.cabal  _Main.hsplay
iRb_thru/: 26-2.jazz  500mileshigh.jazz  502blues.jazz  52ndstreettheme.jazz  920special.jazz  accenttchuatethepositive.jazz  acrossthevalleyfromthealamo.jazz  adamsapple.jazz  afelicidade.jazz  afroblue.jazz  afrocentric.jazz  afternooninparis.jazz  afteryou.jazz  afteryouvegone.jazz  again.jazz  aguadebeber.jazz  aintmisbehavin.jazz  aintshesweet.jazz  airegin.jazz  airmailspecial.jazz  aisha.jazz  alexandersragtimeband.jazz  alfie.jazz  alfiestheme.jazz  aliceinwonderland.jazz  allaboutronnie.jazz  allalone.jazz  allblues.jazz  allgodschillungotrhythm.jazz  allmytomorrows.jazz  allofasuddenmyheartsings.jazz  allofme.jazz  allofyou.jazz  alltheway.jazz  (+1151 more)
(+1250 files in other folders)
